# surveysv

./: .env  .gitignore  conftest.py  manage.py  pyproject.toml  pytest.ini
surveysv/: asgi.py  settings.py  urls.py  wsgi.py
surveysv/api/: urls.py
surveysv/api/responses/: serializers.py  urls.py  views.py
surveysv/api/responses/tests/: test_responses.py
surveysv/api/surveys/: urls.py  views.py
surveysv/core/: models.py
surveysv/responses/: admin.py  apps.py  models.py
surveysv/responses/migrations/: 0001_initial.py  0002_alter_answer_question_alter_answer_response.py
surveysv/surveys/: admin.py  apps.py  models.py
surveysv/surveys/migrations/: 0001_initial.py  0002_option.py  0003_condition_goal.py  0004_survey_surveyquestion_survey_questions.py  0005_alter_surveyquestion_options_and_more.py  0006_rename_is_definition_survey_is_only_child_and_more.py  0007_option_order_alter_surveyinheritance_order.py  0008_remove_survey_parent_surveys_survey_child_surveys.py  0009_alter_option_options.py  0010_alter_surveyquestion_options.py  0011_alter_option_order_alter_surveyinheritance_order_and_more.py  0012_alter_surveyinheritance_unique_together_and_more.py  0013_rename_amount_option_goal.py  0014_question_created_question_updated_survey_created_and_more.py  0015_alter_option_options_alter_option_unique_together.py  0016_surveyversion.py  0017_alter_surveyversion_survey.py  0018_alter_option_goal_alter_question_required_and_more.py  0019_alter_condition_operator.py  0020_alter_option_goal.py
surveysv/tests/: fixtures.py
(+10 files in other folders)
